--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -119,8 +119,8 @@
 
     <TextView
         android:id="@+id/tax"
-        android:layout_width="41dp"
-        android:layout_height="27dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="92dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="16dp"
