XML changes to display and checkout

--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -113,6 +113,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="56dp"
+        android:layout_marginRight="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="0.00"
@@ -145,11 +146,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="124dp"
-        android:layout_marginEnd="36dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="8dp"
         android:text="0.00"
         android:textColor="@android:color/white"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView3" />
 </android.support.constraint.ConstraintLayout>
 
